<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="debt"
            type="ca.oneroof.oneroof.api.Debt" />
        <variable
            name="callback"
            type="ca.oneroof.oneroof.ui.common.ClickCallback"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/debt_roommate_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{debt.roommateName}"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Roommate Name" />

            <Button
                android:id="@+id/debt_pay_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:backgroundTint="#875DD3"
                android:visibility="@{debt.amount &gt; 0 ? View.VISIBLE : View.GONE}"
                android:onClick="@{callback::click}"
                android:drawableStart="@drawable/ic_baseline_monetization_on_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/debt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{ca.oneroof.oneroof.DollarUtils.formatDollarsSign(Math.abs(debt.amount))}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/debt_pay_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$10.00" />

            <TextView
                android:id="@+id/debt_descriptor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{debt.descriptor()}"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/debt_amount"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="owes you" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>