<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="ca.oneroof.oneroof.viewmodel.HouseViewModel"/>
        <variable
            name="fragment"
            type="ca.oneroof.oneroof.ui.house.HomePgHasHouseFragment"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.house.HomePgHasHouseFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_purchase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:clickable="true"
                android:onClick="@{fragment::clickAddPurchase}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/house_purchases"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purchase_history_hdr"
                tools:layout_editor_absoluteX="8dp"
                tools:listitem="@layout/item_purchase" />

            <include
                layout="@layout/fragment_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:resource="@{(ca.oneroof.oneroof.api.Resource) viewmodel.house.data}"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/purchase_history_hdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Purchase History"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_owe" />

            <TextView
                android:id="@+id/you_owe_hdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You owe"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_owe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{ca.oneroof.oneroof.DollarUtils.formatDollarsSign(Math.abs(viewmodel.debtStats.data.data.youOwe))}"
                android:textColor="#900000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/you_owe_hdr" />

            <TextView
                android:id="@+id/text_are_owed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{ca.oneroof.oneroof.DollarUtils.formatDollarsSign(viewmodel.debtStats.data.data.youAreOwed)}"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/you_are_owed_hdr"
                app:layout_constraintTop_toBottomOf="@+id/you_are_owed_hdr" />

            <TextView
                android:id="@+id/you_are_owed_hdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="You are owed"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/you_owe_hdr"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/debt_summary_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#875DD3"
                android:onClick="@{fragment::clickDebts}"
                android:text="See Debts"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/purchase_history_hdr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>